--- a/templates/create-transaction.html
+++ b/templates/create-transaction.html
@@ -61,7 +61,7 @@
         <!-- Trade partner -->
         <div class="field">
           <label class="label">Trade partner</label>
-          <div class="select">
+          <div class="select is-fullwidth">
             <select>
                 <option value="none">Select trade partner</option>
                 <option value="nucular">Nucular Inc.</option>
@@ -81,7 +81,7 @@
         <!-- Currency -->
         <div class="field">
           <label class="label">Currency</label>
-          <div class="select">
+          <div class="select is-fullwidth">
             <select>
               <option value="usd">US Dollar</option>
               <option value="eth">ETH</option>
@@ -92,7 +92,7 @@
         <!-- Incoterms -->
         <div class="field">
           <label class="label">Incoterms</label>
-          <div class="select">
+          <div class="select is-fullwidth">
             <select>
                 <option value="none">Select Incoterms</option>
               <option value="ddp">Delivery Duty Paid</option>
@@ -111,7 +111,7 @@
         <!-- Freight forwarder -->
         <div class="field">
           <label class="label">Freight Forwarder</label>
-          <div class="select">
+          <div class="select is-fullwidth">
             <select>
               <option value="dhl">DHL</option>
               <option value="panalpina">Panalpina</option>
@@ -132,7 +132,7 @@
             <button class="button is-link">Submit</button>
           </div>
           <div class="control">
-            <button class="button is-link is-light">Cancel</button>
+            <button class="button is-link is-light" onclick="document.location='/'">Cancel</button>
           </div>
         </div>
       </div>
